correction on mobile version

--- a/css/styleMobilePortrait.css
+++ b/css/styleMobilePortrait.css
@@ -12,6 +12,11 @@
     z-index: 85;
 }
 
+/* Header */
+#header-background {
+    padding-bottom: 15vw;
+}
+
 /* About me */
 #about-me-section {
     position: absolute;
